--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <div class="webgl-content">
+      <h1> Please play in fullscreen! </h1>
+      <br>
+      <br>
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
